ignore auto-generated files

--- a/.gitignore
+++ b/.gitignore
@@ -4,4 +4,9 @@ tt
 ttt
 tttt
 *bak
+web-sites/mysite.org/public/index.html
+web-sites/mysite.org/public/meetings.html
+web-sites/mysite.org/public/projects.html
+web-sites/mysite.org/public/resources.html
+web-sites/mysite.org/public/topics.html
 
