--- a/.gitignore
+++ b/.gitignore
@@ -9,4 +9,4 @@ web-sites/mysite.org/public/meetings.html
 web-sites/mysite.org/public/projects.html
 web-sites/mysite.org/public/resources.html
 web-sites/mysite.org/public/topics.html
-
+src/*
